1.5.3	2023-01-12
	* Refactoring test suite (TestFu.pm)

1.5.2	2022-12-01
	* Minor fix in POD documentation

1.5.1	2022-06-29
	* Minor fix in POD documentation

1.5.0	2022-06-23
	* Fix: fu-cat length selection, added test
	* Fix: fu-count supports STDIN input
	* Added case insensitive option in fu-extract
	* Added tests for fu-count, fu-grep, fu-extract
	
1.4.10	2022-06-22
	* Testing external scripts with the right interpreter (thanks to ANDK)

1.4.9	2022-06-22
	* Adding PerlIO::encoding as requisite (core since 5.8)
	* Investigating tests failing for some users (special thanks to SREZIC)

1.4.8	2022-06-22
	* Updated binaries from Seqfu 0.x
	
1.4.7	2022-06-21
	* Preparing for 5.32
	* Documentation fixes
	* Updated Windows tests

1.4.6	2022-06-20
	* Extended documentation

1.4.5	2022-06-19
	* Migration of legacy scripts to the Proch-N50 repository
	* Minor changes to the documentation and updated links

1.4.4	2022-06-12
	* Starting migration of the repository to telatin/proch-n50

1.4.3	2022-06-02
	* Fixed future deprecation on regexes
	* Update FASTX::Reader version required (should fix a bug opened in rt)

1.4.2	2021-11-02
	* Fixed perlcritic warnings on 'n50' 
	* Repository update, documentation update, improved errors in wrong lib version detected

1.4.1	2021-08-06
	* Documenation updated with links to the correct repository
	* Skip Windows support test when older FASTX::Reader is in use

1.4.0	2021-08-05
	* Testing support for Windows newlines
	* Updating documentation 

1.3.0	2020-04-11
	* checking that the input files contains sequences
	* BUG FIX: Wrong auN returned if thousands separator was also enabled
	* 'n50' program now supports custom "Nx" (-e INT)

1.2.0	2020-04-09
        * getStats() now also returns "N75" and "N90" statistics
	* getStats() now also returns "auN" metric https://lh3.github.io/2020/04/08/a-new-metric-on-assembly-contiguity
	* getStats() now also returns "path", the absolute path to "dirname"