@@ -10,6 +10,11 @@ use File::Basename;
 use FindBin qw($RealBin);
 use Digest::MD5 qw(md5_base64);
 use FASTX::Reader;
+# The following placeholder is to be programmatically replaced with 'use lib "$RealBin/../lib"' if needed
+#~loclib~
+if ( -e "$RealBin/../lib/Proch/N50.pm" and -e "$RealBin/../Changes" ) {
+    use lib "$RealBin/../lib";
+}
 use Proch::Seqfu;
 my $VERSION = $Proch::Seqfu::VERSION // "<Dev>";
 my $PROGRAM = basename($0);
