@@ -9,6 +9,11 @@ use FindBin qw($RealBin);
 use FASTX::Reader;
 use File::Basename;
 use Data::Dumper;
+# The following placeholder is to be programmatically replaced with 'use lib "$RealBin/../lib"' if needed
+#~loclib~
+if ( -e "$RealBin/../lib/Proch/N50.pm" and -e "$RealBin/../Changes" ) {
+    use lib "$RealBin/../lib";
+}
 sub loadseqs($);
 use Proch::Seqfu;
 my $VERSION = $Proch::Seqfu::VERSION // "<Dev>";
