@@ -8,6 +8,11 @@ use Pod::Usage;
 use File::Basename;
 use Digest::MD5 qw( md5_hex );
 use FindBin qw($RealBin);
+# The following placeholder is to be programmatically replaced with 'use lib "$RealBin/../lib"' if needed
+#~loclib~
+if ( -e "$RealBin/../lib/Proch/N50.pm" and -e "$RealBin/../Changes" ) {
+    use lib "$RealBin/../lib";
+}
 use FASTX::Reader;
 use Proch::Seqfu;
 
