@@ -8,6 +8,11 @@ use Getopt::Long;
 use File::Basename;
 use FindBin qw($RealBin);
 my $PROGRAM = 'fu-len';
+# The following placeholder is to be programmatically replaced with 'use lib "$RealBin/../lib"' if needed
+#~loclib~
+if ( -e "$RealBin/../lib/Proch/N50.pm" and -e "$RealBin/../Changes" ) {
+    use lib "$RealBin/../lib";
+}
 use Proch::Seqfu;
 my $VERSION = $Proch::Seqfu::VERSION // "<Dev>";
 my $DESCR   = 'Select sequences by size';
