@@ -1,5 +1,6 @@
 1.5.3	2023-01-12
 	* Refactoring test suite (TestFu.pm)
+	* Updated binaries to uniformly load library and use the unblessed method getRead()
 
 1.5.2	2022-12-01
 	* Minor fix in POD documentation
